[package]
name = "web-fs"
version = "0.2.7"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "An async file system for browser wasm."
repository = "https://github.com/newDINO/web-fs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = { version = "0.4.50", features = ["futures-core-03-stream"] }
web-sys = { version = "0.3.77", features = [
    "Window",
    "Navigator",
    "Worker",
    "MessageEvent",
    "StorageManager",
    "FileSystemGetFileOptions",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
    "FileSystemGetDirectoryOptions",
    "FileSystemRemoveOptions",
    "WorkerGlobalScope",
    "WorkerNavigator",
    "DomException",
] }
js-sys = "0.3.77"
futures-lite = "2.6.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
console_error_panic_hook = "0.1.7"